--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=orderservice
 
-spring.cloud.config.profile=dev
-configurl=http://localhost:8079
+spring.cloud.config.profile=prod
+configurl=http://34.170.71.82
 spring.config.import=configserver:${configurl}
